k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cahoots-ingress
  namespace: cahoots
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: cahoots.cc
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: master
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-client
            port:
              number: 80
