k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cahoots
  labels:
    name: cahoots
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: cahoots
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
